# EHR

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report-🐛.md  feature-request-🌟.md  good-first-issue-🟢.md  help-wanted-🙋.md
.github/workflows/: docstring_coverage.yml  draft-pdf.yml  format.yml  lint.yml  pipeline.yml  pipeline_big_data.yml  pipeline_temp.yml  unittests.yml  utest_coverage_badge.yml
classes/: excluder.py  features.py
corebehrt/: dask_test.py  main_create_data.py  main_create_outcomes.py  run_remote.py  test.ipynb
corebehrt/azure/: README.md  __init__.py  __main__.py  environment.py  log.py  logging.py  util.py
corebehrt/azure_run/: __init__.py  _overview.md  backup.py  logger.py  model.py  run.py  validation.py
corebehrt/classes/: activations.py  dataset.py  embeddings.py  excluder.py  features.py  heads.py  loader.py  model.py  normalizer.py  outcomes.py  patient_filter.py  prepare_data.py  tokenizer.py  values.py
corebehrt/common/: _overview.md  azure.py  config.py  loader.py  (+6 more)
docs/: conf.py
env/: pyvenv.cfg
example_data/: concept.diagnose.parquet  concept.medication.parquet  patients_info.parquet
functional/: creators.py  exclude.py  utils.py
paper/: paper.bib  paper.md
test_dir/: sequences_lengths_test.pt  train_pids.pt  val_pids.pt  vocabulary.pt
tests/: helpers.py  test_azure.py  test_batch.py  test_censor.py  test_concept_loader.py  test_creators.py  test_exclude.py  test_featuremaker.py  test_features.py  test_filter.py  test_infer.py  test_mask.py  test_split.py  test_tokenize.py  test_tokenizer.py  test_truncate.py  test_utils.py
(+864 files in other folders)
