[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corebehrt"
version = "0.1.0"
description = "A framework for processing and analyzing Electronic Health Records (EHR) data using BERT-based models."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Kiril Klein", email = "kikl@di.ku.dk" },
    { name = "Mikkel Odgaard" },
    { name = "Stephan Lorenzen" },
    { name = "Maria Montgomery" },
]
keywords = ["EHR", "BERT", "healthcare", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "python-dateutil==2.9.0.post0",
    "PyYAML>=6.0.2",
    "scikit-learn>=1.5.2",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers>=4.48.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/FGA-DIKU/EHR"
Source = "https://github.com/FGA-DIKU/EHR"
Tracker = "https://github.com/FGA-DIKU/EHR/issues"
